overlapped images also transparency issue resolved

--- a/New Era Wavs/style.css
+++ b/New Era Wavs/style.css
@@ -1,4 +1,4 @@
-body,html{
+/* body,html{
     width: 100%;
     margin:0;
     height: 100%;
@@ -8,7 +8,7 @@ body,html{
 
 .landing-page{
     width:100%;
-    min-height:100%;
+    min-height:90%;
     background-image: url("imgs/banner.png");
     background-size: cover;
     background-repeat: no-repeat;
@@ -25,4 +25,31 @@ body,html{
     background-repeat: no-repeat;
     background-position: top; 
     background-attachment: scroll;
+} */
+
+*{
+    margin:0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
+.landing-page{
+    min-height: 100%;
+    min-width: 100%;
+    background-image: url("imgs/banner.png");
+    background-size: cover;
+    background-position: center;
+    z-index: -1;
+}
+
+.content-section{
+    margin-top:-100px;
+    min-height: 100%;
+    min-width: 100%;
+    background-image: url("imgs/content-section.png");
+    background-size: cover;
+    background-attachment: scroll;
+    z-index: 1;
 }
